--- a/mfbt/CMakeLists.txt
+++ b/mfbt/CMakeLists.txt
@@ -19,3 +19,39 @@ target_include_directories(mfbt
     ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 target_compile_definitions(mfbt PUBLIC -DIMPL_MFBT)
+
+set(MFBT_PUBLIC_HDRS
+  src/mozilla/Assertions.h
+  src/mozilla/Attributes.h
+  src/mozilla/BloomFilter.h
+  src/mozilla/Char16.h
+  src/mozilla/CheckedInt.h
+  src/mozilla/Compiler.h
+  src/mozilla/Constants.h
+  src/mozilla/DebugOnly.h
+  src/mozilla/EnumSet.h
+  src/mozilla/FloatingPoint.h
+  src/mozilla/GuardObjects.h
+  src/mozilla/HashFunctions.h
+  src/mozilla/Likely.h
+  src/mozilla/LinkedList.h
+  src/mozilla/MathAlgorithms.h
+  src/mozilla/MemoryChecking.h
+  src/mozilla/MSStdInt.h
+  src/mozilla/NullPtr.h
+  src/mozilla/Range.h
+  src/mozilla/RangedPtr.h
+  src/mozilla/RefPtr.h
+  src/mozilla/Scoped.h
+  src/mozilla/SHA1.h
+  src/mozilla/SplayTree.h
+  src/mozilla/StandardInteger.h
+  src/mozilla/ThreadLocal.h
+  src/mozilla/TypedEnum.h
+  src/mozilla/Types.h
+  src/mozilla/TypeTraits.h
+  src/mozilla/Util.h
+  src/mozilla/WeakPtr.h)
+
+install(FILES ${MFBT_PUBLIC_HDRS}
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mozilla)
